--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: survey, local: true) do |form| %>
+<%= form_with(model: survey, local: true, id: :formId) do |form| %>
   <% if survey.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(survey.errors.count, "error") %> prohibited this survey from being saved:</h2>
@@ -11,16 +11,17 @@
     </div>
   <% end %>
 
+
   <div class="form-group">
     <%= form.label :name, 'Enter Your Name' %>
-    <%= form.text_area :name, id: :survey_name, class: 'form-control' %>
+    <%= form.text_area :name, id: :survey_name, class: 'form-control inputStyle' %>
   </div>
 
     <div>
       <%= form.label :major, 'Enter your major' %>
-      <%= form.text_area :major, id: :survey_name, class: 'form-control' %>
+      <%= form.text_area :major, id: :survey_name, class: 'form-control inputStyle' %>
     </div>
-
+<br />
   <div class="form-group">
     <%= form.label :laptop, 'Do you own a laptop?' %><br />
     <%= form.label :laptop, 'Yes', :value => 'true'  %>
@@ -34,8 +35,37 @@
     <%= form.select :os, ['No OS', 'Mac OSX', 'Windows 10', 'Windows 7 or below', 'Linux']%>
   </div>
 
-  <div class="form-group">
-    <%= form.submit 'Submit Your Response', class: 'btn btn-primary' %>
+    <div class="form-group date">
+      <%= form.label :graduationDate, 'Graduation Date' %>
+      <%= form.date_field :graduationDate, id: :date, class: 'form-control dateStyle' %>
+
+    </div>
+
+    <div class="form-group">
+      <%= form.label :level, 'Are you excited for this class?' %><br />
+      <%= form.label :level, 'Yes', :value => 'true'  %>
+      <%= form.radio_button :level, 'Yes',:checked => true  %>
+      <%= form.label :level, 'No', :value => 'false' %>
+      <%= form.radio_button :level, 'No' %>
+    </div>
+
+  <div class="form-group" align="right">
+    <%= form.submit 'Submit Your Response', class: 'btn btn-primary btn-custom' %>
   </div>
 
 <% end %>
+
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+<link rel="stylesheet" href="fontawesome-stars.css">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script src="jquery.barrating.min.js"></script>
+<script type="text/javascript">
+    $(function() {
+        $('[name="survey[scale]"]').barrating({
+            theme: 'fontawesome-stars'
+        });
+    });
+</script>
+
+
