--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -2,6 +2,7 @@
 <div class="container">
 <h1>Surveys</h1>
 
+
 <table class="table table-striped">
   <thead>
     <tr>
@@ -9,6 +10,8 @@
       <th>Major</th>
       <th>Laptop</th>
       <th>Os</th>
+      <th>Graduation Date</th>
+      <th>Excited?</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,11 +21,20 @@
       <tr>
         <td><%= survey.name %></td>
         <td><%= survey.major %></td>
-        <td><%= survey.laptop %></td>
+        <% if survey.laptop == 'Yes' %>
+        <td><i class="fa fa-check-square-o " style="color: #458B00; font-size:25px"></i></td>
+        <% else %>
+        <td><i class="fa fa-times " style="color: #A80000; font-size:25px"></i> </td>
+        <% end %>
         <td><%= survey.os %></td>
-        <td><%= link_to 'Show', survey %></td>
-        <td><%= link_to 'Edit', edit_survey_path(survey) %></td>
-        <td><%= link_to 'Destroy', survey, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= survey.graduationDate %></td>
+        <% if survey.level == 'Yes' %>
+            <td><i class="fa fa-smile-o" style="font-size:40px"></i></td>
+        <% else %>
+            <td><i class="fa fa-frown-o" style="font-size:40px"></i> </td>
+        <% end %>
+        <td><%=link_to  edit_survey_path(survey) do %><i class="fa fa-pencil-square-o >"></i><% end  %></td>
+        <td><%= link_to survey, method: :delete, data: { confirm: 'Are you sure?' } do %><i class="fa fa-window-close"></i><% end %></td>
       </tr>
     <% end %>
   </tbody>
