--- a/app/views/surveys/new.html.erb
+++ b/app/views/surveys/new.html.erb
@@ -1,5 +1,6 @@
-<div class="container">
-<h1>New Survey</h1>
+<div class="container createFormWidth">
+<h1>Welcome to TECM 4400</h1>
+  <br />
 
 <%= render 'form', survey: @survey %>
 
